remove unused classes/code, raw parameter type, misc. cleanup